# atls-studio

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  REVIEWED_CLEAN.md
.cursor/rules/: edit-freshness.mdc
.github/workflows/: ci.yml
atls-rs/: Cargo.toml  LANGUAGES.md
atls-rs/crates/atls-core/: Cargo.toml
atls-rs/crates/atls-core/src/: lib.rs  preprocess.rs  project.rs
atls-rs/crates/atls-core/src/db/: migrations.rs  mod.rs  queries.rs  schema.rs
atls-rs/crates/atls-core/src/detector/: loader.rs  mod.rs  registry.rs  runner.rs  treesitter.rs
atls-rs/crates/atls-core/src/indexer/: fallback_extractor.rs  mod.rs  relations.rs  scanner.rs  symbols.rs  uhpp_extractor.rs
atls-rs/crates/atls-core/src/parser/: captures.rs  languages.rs  mod.rs  query.rs  registry.rs
atls-rs/crates/atls-core/src/query/: context.rs  feedback.rs  files.rs  grammar.rs  graph.rs  hybrid.rs  issues.rs  llm_query.rs  mod.rs  query.pest  search.rs  structured.rs  symbols.rs
atls-rs/crates/atls-core/src/types/: file.rs  fix.rs  issue.rs  mod.rs  pattern.rs  symbol.rs  uhpp.rs
atls-rs/crates/atls-core/src/watcher/: events.rs  filter.rs  mod.rs
atls-rs/crates/atls-mcp/: Cargo.toml
atls-rs/crates/atls-mcp/src/: main.rs  project.rs  protocol.rs  transport.rs
atls-rs/crates/atls-mcp/src/handlers/: batch.rs  export.rs  issues.rs  mod.rs  overview.rs  patterns.rs  scan.rs
atls-rs/patterns/: all.json  c.json  cpp.json  csharp.json  dart.json  go.json  java.json  javascript.json  legacy.json  php.json  python.json  ruby.json  rust.json  scala.json  sql.json  swift.json  typescript.json
atls-rs/schemas/: unified-batch.schema.json
atls-rs/scripts/: convert-patterns.mjs  sync-severity-from-ts.mjs
atls-studio/: .gitignore  CONTRIBUTING-TESTS.md  README.md  _test_tool_probe.ts  coverage-baseline.json  coverage-gap-exclusions.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
atls-studio/docs/: ARCHITECTURE.md
atls-studio/e2e/: app-layout.spec.ts  chat-session-reload.spec.ts  dev-server-smoke.spec.ts
atls-studio/scripts/: fetch-models.ts  list-coverage-below-pct.ts  list-coverage-gaps.ts
atls-studio/src/: App.dom.test.tsx  App.tsx  __test_tool_probe.ts  _test_tool_probe.ts  index.css  main.entry.test.ts  main.tsx
atls-studio/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
atls-studio/src-tauri/capabilities/: default.json
atls-studio/src-tauri/scripts/: gen_claude_vocab.py
atls-studio/src-tauri/src/: ai_execute.rs  ai_models.rs  ai_streaming.rs  ast_query.rs  atls_ops.rs  chat_attachments.rs  chat_db.rs  chat_db_commands.rs  code_intel.rs  diff_engine.rs  edit_session.rs  error.rs  file_ops.rs  file_watcher.rs  gemini_cache.rs  git_ops.rs  hash_commands.rs  hash_protocol.rs  hash_resolver.rs  lib.rs  line_remap.rs  linter.rs  main.rs  path_utils.rs  pty.rs  refactor_engine.rs  search_exec.rs  shape_ops.rs  snapshot.rs  stream_protocol.rs  tokenizer.rs  tokenizer_shorthand_audit.rs  workspace_run.rs
atls-studio/src-tauri/src/batch_query/: helpers.rs  mod.rs
atls-studio/src-tauri/src/commands/: mod.rs
atls-studio/src-tauri/test_project/: Cargo.toml  hello.rs
atls-studio/src/__tests__/: bracket-stress.ts  bracket-torture.ts  bracket_stress.ts  contract.test.ts  dormant-eviction.test.ts  edit-actions.test.ts  engram-finding-persistence.test.ts  frontend-import-smoke.test.ts  hash-contract.test.ts  hpp-validation.test.ts  perf.test.ts  torture-brackets.ts
atls-studio/src/components/: ChatMessage.dom.test.tsx  ChatMessage.tsx  ImageAttachment.dom.test.tsx  icons.tsx  (+4 more)
atls-studio/test-gap-reports/: README.md  rust-atls-rs-zero-line-coverage.txt  rust-src-tauri-zero-line-coverage.txt  scripts-out-of-scope.txt  ts-zero-line-coverage.txt
atls-studio/testdata/: uhpp_diff_ref_cases.json  uhpp_hash_ref_cases.json
docs/: DOCUMENTATION_AUDIT.md  README.md  api-economics.md  assess-context.md  atls-engine.md  auto-pin-on-read.md  batch-executor.md  cognitive-runtime.md  engrams.md  freshness.md  hash-protocol.md  history-compression.md  input-compression-merit.md  input-compression.md  mcp-integration.md  metrics.md  output-compression.md  prompt-assembly.md  session-persistence.md  studio-app-shell.md  subagents.md  swarm-orchestration.md  symbol-resolver.md  tauri-backend.md  tauri-commands.md  test-coverage-backlog.md  whitepaper.md
scripts/: test-validation-fixes.ps1  test-validation-fixes.sh
src/utils/: hashModifierParser.ts  hashRefParsers.ts
(+405 files in other folders)
