[package]
name = "atls-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = "0.1"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-dart-orchard = "0.3"
notify = { workspace = true }
ignore = { workspace = true }
sha2 = "0.10"
streaming-iterator = "0.1"
tempfile = { version = "3", optional = true }
regex = "1"
num_cpus = "1.16"
lru = "0.12"

[dev-dependencies]
tempfile = "3"

[lib]
name = "atls_core"
path = "src/lib.rs"
